Modification to showing html files. -NM