@@ -41,30 +41,25 @@ public class AboutWindow extends JFrame {
         jsp.setVerticalScrollBarPolicy(JScrollPane.VERTICAL_SCROLLBAR_ALWAYS);
 
         try {
-            showURL((new URL("file://" + udir + "\\docs\\about.html")).toString(), aboutPane);
+            File f = new File(udir, "docs/about.html");
+            showURL(f.toURI().toURL());
         } catch (Exception e) { e.printStackTrace(); }
-
 
         getContentPane().add(jsp);
         setSize(600, 600);
     }
-
-
-
-
 
     /**
      * Shows the given url in the editor pane.
      *
      * @param   url The given url will be showed in JEditorPane editorPane.
      */
-        public void showURL(String url, JEditorPane pane) {
-            try {
-                pane.setPage(url);
-                //show();
-            }
-            catch (IOException e) {
-                System.err.println("Attempted to read a bad URL: " + url);
-            }
+    public void showURL(URL url) {
+        try {
+            aboutPane.setPage(url);
+            //show();
+        } catch (IOException e) {
+            System.err.println("Attempted to read a bad URL: " + url);
         }
+    }
 }
